# claap

./: .dir-locals.el  .gitignore  AUTHORS.txt  LICENSE.txt  README.md  cabal.project  do
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
cfg/: build.cfg
src/: README.md
src/aap/: Main.hs  README.md
src/aap/AAP/: ALU.hs  DMem.hs  Decoder.hs  Execute.hs  Fetch.hs  IMem.hs  PC.hs  RegFile.hs  State.hs  Test.hs  Types.hs
src/aap/AAP/Export/: ICE40.hs
src/aap/AAP/Sim/: Assemble.hs  Disassemble.hs  Test.hs
src/aap/AAP/Sim/Test/: Disassembler.hs
src/aap/AAP/Test/: Decoder.hs
src/clash-extras/: clash-extras.cabal
src/clash-extras/CLaSH/Lattice/: ICE40.hs
src/clash-extras/CLaSH/Testbench/: Fancy.hs
src/clash-ice40/: clash-ice40.cabal
src/clash-ice40/CLaSH/Lattice/: ice40.v
src/dhrystone/: README.md  dhry_1.c
src/fpga/ice40/: hx1k-icestick.pcf  hx8k-breakout-board.pcf
src/mk/: Build.hs  Config.hs  Options.hs  cabal.project  claap-build.cabal
src/mk/Development/Shake/: Fancy.hs
src/mk/Tools/: ArachnePNR.hs  CLaSH.hs  Extra.hs  IVerilog.hs  Icestorm.hs  Yosys.hs
src/t/disasm/: alu.txt  branch.txt  load.txt  move.txt  noop.txt  store.txt
