name:                claap-build
version:             0.0.0.0
synopsis:            Build system for CLAAP (CLaSH/AAP).
license:             BSD3
author:              Austin Seipp
maintainer:          aseipp@pobox.com
copyright:           2016 Austin Seipp
category:            Development, Shake
build-type:          Simple
cabal-version:       >= 1.25
tested-with:         GHC == 8.0.2

--------------------------------------------------------------------------------

executable mk
  default-language:  Haskell2010
  ghc-options:
    -Wall
    -rtsopts "-with-rtsopts=-I0 -qg -qb"
    -threaded

  main-is:           Build.hs
  other-modules:
    Config
    Options
    Tools.ArachnePNR
    Tools.CLaSH
    Tools.Extra
    Tools.Icestorm
    Tools.IVerilog
    Tools.Yosys

  build-tool-depends: clash-ghc:clash == 0.7.0.1
  build-depends:
    -- we require an exact version of GHC, so fix that here
    ghc          == 8.0.2,
    base         == 4.9.1.0,

    -- these don't need fixed versions, but are shipped with GHC, and thus fixed
    -- by virtue of the above constraints
    bytestring,
    filepath,
    transformers,

    -- these external dependencies require specific, or possibly open, version
    -- ranges
    shake        == 0.15.11,
    split        >= 0.2.3   && < 0.3,

    -- finally, we also need any of our own private packages (found using
    -- cabal.project)
    clash-extras
